# apika

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  README_RU.md  README_ZH.md  makefile  pyproject.toml  setup.py  setup_github.sh
.github/workflows/: ci.yml  docker.yml  publish.yml
apiki/: __init__.py  __main__.py  agent.py  cli.py  client.py  examples.py
